[package]
name = "nix-otel-plugin"
version = "0.1.0"
edition = "2018"

[lib]
crate_type = ["cdylib"]
test = false

[build-dependencies]
cc = "1.0.58"
pkg-config = "0.3.18"
cbindgen = "0.24.3"

[dependencies]
opentelemetry = "0.18.0"
opentelemetry-otlp = { version = "0.11.0", features = ["tls", "tls-roots"] }
opentelemetry_api = "0.18.0"
opentelemetry_sdk = { version = "0.18.0", features = ["rt-tokio"] }
thread_local = "1.1.4"
tokio = { version = "1.21.2", features = ["full"] }
tonic = { version = "0.8.2", features = ["tls", "tls-roots"] }
